# yiranji

./: .gitignore  LICENSE  README.md  VERSION  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build-regions.mjs  sync-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  yrj_file.rs
src/components/: AvatarCropModal.css  AvatarCropModal.tsx  MainLayout.css  MainLayout.tsx  MediaImportProgress.css  MediaImportProgress.tsx
src/data/: china-regions.json
src/pages/: PersonDetailPage.css  PersonDetailPage.tsx  PersonEditPage.css  PersonEditPage.tsx  PersonsPage.css  PersonsPage.tsx  SettingsPage.css  SettingsPage.tsx  TreePage.css  TreePage.tsx  WelcomePage.css  WelcomePage.tsx
src/store/: familyStore.ts  mediaProgressStore.ts
src/types/: index.ts  lunar-javascript.d.ts
src/utils/: bodyScrollLock.ts  index.ts  tauri.ts
