[package]
name = "app"
version = "26.7.10"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.5", features = ["protocol-asset", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"
rfd = "0.14"
hmac = "0.12"
base64 = "0.22"
